Mac/XCB/Windows: Fix initial setting of window icons.

Setting an icon on a QWindow before creating the platform
window did not have any effect.

Task-number: QTBUG-31961
Change-Id: I8e58a3b239c8bc69af58f765e7826337463d2201
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>